Fixes dark mode

--- a/src/features/comments/style/_comments.scss
+++ b/src/features/comments/style/_comments.scss
@@ -25,6 +25,8 @@
             font-size: 1.2rem;
         }
         &__arrow {
+            width: 14px;
+            height: 8px;
             padding-left: 10px;
         }
     }
