--- a/src/style/main.css
+++ b/src/style/main.css
@@ -324,6 +324,8 @@ a {
 }
 
 .comments__backtopost__arrow {
+  width: 14px;
+  height: 8px;
   padding-left: 10px;
 }
 
@@ -431,11 +433,17 @@ a {
     background-color: #545D68;
     color: white;
   }
+  .post {
+    background-color: #2D333B;
+  }
   .comments {
     background-color: #21262E;
   }
   .feed__subredditname {
     color: white;
+  }
+  .singlecomment__seperatorline {
+    background-color: #2D333B;
   }
 }
 
